--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -13,15 +13,20 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.33.6",
+    "@tanstack/react-form": "^1.23.8",
+    "@tanstack/react-query": "^5.90.8",
     "@vapi-ai/web": "^2.5.0",
     "@workspace/backend": "workspace:*",
     "@workspace/ui": "workspace:*",
+    "axios": "^1.13.2",
     "convex": "^1.28.0",
     "lucide-react": "^0.475.0",
     "next": "^15.4.5",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "zod": "^3.25.76",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/node": "^20.19.9",
